working on js for ride request

--- a/kogo/templates/base.html
+++ b/kogo/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{STATIC_URL}}css/bootstrap.css" rel="stylesheet">
-    <link href="{{STATIC_URL}}style.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}css/style.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-inverse" role="navigation">
@@ -51,7 +51,7 @@
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap.min.js"></script>
     {% block additional_javascript %}
 
     {% endblock %}
