--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -1,6 +1,12 @@
 html, body, div.btn-holder {
 	width: 100%;
+	height: 100%;
 }
+
+nav.navbar.navbar-inverse {
+	margin-bottom: 0px;
+}
+
 
 .location-btn {
 	width: 300px;
@@ -9,4 +15,37 @@ html, body, div.btn-holder {
 	font-size: 24px;
 	font-weight: bold;
 	display: block;
+}
+
+h3.pickup-title, h3.dropoff-title {
+	margin-left: 20px;
+}
+
+span.glyphicon-arrow-left {
+	margin-left: 20px;
+	font-size: 24px;
+	color: Firebrick;
+	cursor: pointer;
+}
+
+span.glyphicon-arrow-left strong {
+	margin-left: 10px;
+}
+
+div.content-holder {
+	height: 100%;
+}
+
+div.wait-background {
+	background: green;
+	margin-top: 0px;
+	height: 100%;
+	text-align: center;
+}
+
+div.wait-background h1{
+	padding-top: 200px;
+	color: white;
+	font-size: 300px;
+	margin-top: 0px;
 }
