--- a/kogo/templates/ride_request.html
+++ b/kogo/templates/ride_request.html
@@ -5,11 +5,13 @@
   {% endblock %}
 
 {% block content %}
+<div class="content-holder">
+  <div class="request-screens">
 <div class="pickup">
-	<h3>Pickup From</h3>
+	<h3 class="pickup-title">Pickup From</h3>
 	{% for loc in locations %}
 	<div class="btn-holder">
-		<button class="location-btn btn btn-lg">
+		<button class="location-btn btn btn-lg" data-name="{{loc.name}}">
 			{{loc.name}}
 		</button>
 	</div>
@@ -17,14 +19,17 @@
 </div>
 
 <div class="dropoff" hidden="true">
-  <h3>From <strong class="dropoff-loc"> </strong> to:</h3>
+  <span class="glyphicon glyphicon-arrow-left"><strong>Back</strong></span>
+  <h3 class="dropoff-title">From <strong class="dropoff-loc"> </strong> to:</h3>
   {% for loc in locations %}
   <div class="btn-holder">
-    <button class="location-btn btn btn-lg">
+    <button class="location-btn btn btn-lg" data-name="{{loc.name}}">
       {{loc.name}}
     </button>
   </div>
   {% endfor %}
 </div>
+</div class="request-screens">
+</div class="content-holder">
 
 {% endblock %}
