added ability to cancel a request

--- a/kogo/templates/wait_screen.html
+++ b/kogo/templates/wait_screen.html
@@ -1,4 +1,9 @@
 <div class="wait-background">
 <h1>{{group_number}}</h1>
+<div class="cancel-request-holder">
+	<span class="glyphicon glyphicon-remove"></span>
+	<strong>Cancel Request</strong>
+
+</div>
 
 </div>
