--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -28,7 +28,8 @@ span.glyphicon-arrow-left {
 	cursor: pointer;
 }
 
-span.glyphicon-arrow-left strong {
+span.glyphicon-arrow-left strong,
+div.cancel-request-holder strong {
 	margin-left: 10px;
 }
 
@@ -48,4 +49,18 @@ div.wait-background h1{
 	color: white;
 	font-size: 300px;
 	margin-top: 0px;
+}
+
+
+div.cancel-request-holder {
+	margin-top: 50px;
+	text-align: center;
+	width: 100%;
+	font-size: 40px;
+	color: white;
+	cursor: pointer;
+}
+
+div.cancel-request-holder span {
+	color: Firebrick;
 }
