--- a/kogo/templates/login.html
+++ b/kogo/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block navbar_content %}
   <ul class="nav navbar-nav">
-  	<li><a href="#">Not a driver?</a></li>
+  	<li><a href="{% url 'create_account' %}">New to Kogo?</a></li>
   </ul>
 {% endblock %}
 
@@ -13,22 +13,17 @@
   {% csrf_token %}
   
     <div class="form-group">
-    	<div class="input-group-addon">
-		    		<span class="glyphicon glyphicon-user"></span>
-		    	</div>
       <input id="id_username" name="username" placeholder="Username" type="text">
     </div>
   
     <div class="form-group">
-    	<div class="input-group-addon">
-		    		<span class="glyphicon glyphicon-lock"></span>
-		    	</div>
       <input id="id_password" name="password" placeholder="Password" type="password">
     </div>
   
 	  <button type="submit" class="btn btn-lg btn-primary">
 	    Log in
 	  </button>
+	  <a class="new-to-kogo" href="{% url 'create_account' %}">New to Kogo?</a>
 	</form>
 </div>
 
