--- a/kogo/templates/ride_request.html
+++ b/kogo/templates/ride_request.html
@@ -4,14 +4,22 @@
     <script type="text/javascript" src="{{STATIC_URL}}js/ride_request.js"></script>
   {% endblock %}
 
+  {% block navbar_content %}
+  <ul class="nav navbar-nav">
+    <li><a href="{% url 'student_logout'%}">Logout</a></li>
+  </ul>
+{% endblock %}
+
 {% block content %}
+{% load student_tags %}
 <div class="content-holder">
   <div class="request-screens">
 <div class="pickup">
 	<h3 class="pickup-title">Pickup From</h3>
 	{% for loc in locations %}
 	<div class="btn-holder">
-		<button class="location-btn btn btn-lg" data-name="{{loc.name}}">
+    <button class="btn btn-danger num-requests">{{loc|num_active_requests}}</button>
+		<button class="location-btn pickup btn btn-lg" data-name="{{loc.name}}">
 			{{loc.name}}
 		</button>
 	</div>
