--- a/kogo/templates/wait_screen.html
+++ b/kogo/templates/wait_screen.html
@@ -1,9 +1,11 @@
 <div class="wait-background">
-<h1>{{group_number}}</h1>
-<div class="cancel-request-holder">
-	<span class="glyphicon glyphicon-remove"></span>
-	<strong>Cancel Request</strong>
-
-</div>
-
+	<div class="request-summary-holder">
+		<span class="glyphicon glyphicon-road"></span>
+		From <strong>{{start_loc}}</strong> to <strong>{{end_loc}}</strong>
+	</div>
+	<h1>{{group_number}}</h1>
+	<div class="cancel-request-holder">
+		<span class="glyphicon glyphicon-remove"></span>
+		<strong>Cancel Request</strong>
+	</div>
 </div>
