--- a/kogo/templates/ride_request.html
+++ b/kogo/templates/ride_request.html
@@ -14,30 +14,19 @@
 {% load student_tags %}
 <div class="content-holder">
   <div class="request-screens">
-<div class="pickup">
-	<h3 class="pickup-title">Pickup From</h3>
-	{% for loc in locations %}
-	<div class="btn-holder">
-    <button class="btn btn-danger num-requests">{{loc|num_active_requests}}</button>
-		<button class="location-btn pickup btn btn-lg" data-name="{{loc.name}}">
-			{{loc.name}}
-		</button>
-	</div>
-  {% endfor %}
-</div>
-
-<div class="dropoff" hidden="true">
-  <span class="glyphicon glyphicon-arrow-left"><strong>Back</strong></span>
-  <h3 class="dropoff-title">From <strong class="dropoff-loc"> </strong> to:</h3>
-  {% for loc in locations %}
-  <div class="btn-holder">
-    <button class="location-btn btn btn-lg" data-name="{{loc.name}}">
-      {{loc.name}}
-    </button>
-  </div>
-  {% endfor %}
-</div>
-</div class="request-screens">
+    <div class="pickup">
+    	<h3 class="pickup-title">Pickup from:</h3>
+    	{% for loc in starting_locations %}
+    	<div class="btn-holder">
+        <button class="btn btn-danger num-requests">{{loc|num_active_requests}}</button>
+    		<button class="location-btn pickup btn btn-lg" data-name="{{loc.name}}">
+    			{{loc.name}}
+    		</button>
+    	</div>
+      {% endfor %}
+    </div>
+    <div class="dropoff" hidden="true"></div>
+  </div class="request-screens">
 </div class="content-holder">
 
 {% endblock %}
