--- a/kogo/templates/dropoff_locations.html
+++ b/kogo/templates/dropoff_locations.html
@@ -1,10 +1,10 @@
-  <button class="back-btn btn btn-danger">
+  <button class="back-btn btn shadow">
     <span class="glyphicon glyphicon-arrow-left"><strong>Back</strong></span>
   </button>
   <h3 class="dropoff-title">From <strong class="dropoff-loc"> {{ pickup_loc }}</strong> to:</h3>
   {% for loc in dropoff_locs %}
   <div class="btn-holder">
-    <button class="location-btn dropoff btn btn-lg" data-name="{{loc.name}}">
+    <button class="location-btn dropoff shadow btn btn-lg" data-name="{{loc.name}}">
       {{loc.name}}
     </button>
   </div>
