--- a/kogo/templates/ride_request.html
+++ b/kogo/templates/ride_request.html
@@ -18,8 +18,8 @@
     	<h3 class="pickup-title">Pickup from:</h3>
     	{% for loc in starting_locations %}
     	<div class="btn-holder">
-        <button class="btn btn-danger num-requests">{{loc|num_active_requests}}</button>
-    		<button class="location-btn pickup btn btn-lg" data-name="{{loc.name}}">
+        <button class="btn btn-danger num-requests request-shadow">{{loc|num_active_requests}}</button>
+    		<button class="shadow location-btn pickup btn btn-lg" data-name="{{loc.name}}">
     			{{loc.name}}
     		</button>
     	</div>
