--- a/kogo/templates/group_info.html
+++ b/kogo/templates/group_info.html
@@ -3,13 +3,22 @@
 		<span class="glyphicon glyphicon-road"></span>
 		From <strong>{{group.starting_loc.name}}</strong> to <strong>{{group.ending_loc.name}}</strong>
 	</div>
-	{% for request in requests %}
-	<div class="btn-holder">
-	    <button class="student shadow btn btn-lg" data-name="{{loc.name}}">
-	      {{request.student}}
-	      <span class="glyphicon glyphicon-ok hidden"></span>
-	    </button>
-  	</div>
-	{% endfor %}
+	<div class="start-ride-holder">
+		{% for request in requests %}
+		<div class="btn-holder">
+		    <button class="student shadow btn btn-lg" data-name="{{loc.name}}">
+		      {{request.student}}
+		      <span class="glyphicon glyphicon-ok hidden"></span>
+		    </button>
+	  	</div>
+		{% endfor %}
+		<button style="display: none" class="shadow start-ride btn" data-group-id="{{group.id}}">Start Ride
+		</button>
+	</div>
+	<div class="during-ride-container" hidden="true">
+		<h2 class="ride-in-progress">Ride In Progress</h2>
+		<button style="display: none" class="shadow start-ride btn" data-group-id="{{group.id}}">End Ride
+		</button>
+	</div>
 	
 </div>
