--- a/kogo/templates/ride_request.html
+++ b/kogo/templates/ride_request.html
@@ -6,7 +6,7 @@
 
   {% block navbar_content %}
   <ul class="nav navbar-nav">
-    <li><a href="{% url 'student_logout'%}">Logout</a></li>
+    <li><a href="{% url 'logout_user'%}">Logout</a></li>
   </ul>
   {% endblock %}
 
