--- a/kogo/templates/group_info.html
+++ b/kogo/templates/group_info.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="during-ride-container" hidden="true">
 		<h2 class="ride-in-progress">Ride In Progress</h2>
-		<button style="display: none" class="shadow start-ride btn" data-group-id="{{group.id}}">End Ride
+		<button class="shadow end-ride btn" data-group-id="{{group.id}}">End Ride
 		</button>
 	</div>
 	
