--- a/kogo/templates/students/wait_screen.html
+++ b/kogo/templates/students/wait_screen.html
@@ -10,7 +10,7 @@
 	<h1>{{group_number}}</h1>
 	<form method="post" action="{% url 'cancel_request' %}">
 		{% csrf_token %}
-		<button type="submit" class="cancel-request-holder">
+		<button type="submit" class="btn btn cancel-request-holder">
 			<span class="glyphicon glyphicon-remove"></span>
 			<strong>Cancel Request</strong>
 		</button>
