--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -98,6 +98,15 @@ div.cancel-request-holder {
 	cursor: pointer;
 }
 
+div.push-down {
+	margin-bottom: 100px;
+}
+
+h2.ride-in-progress{
+	margin-top: 100px;
+	font-size: 50px;
+}
+
 div.cancel-request-holder span {
 	color: Firebrick;
 }
@@ -105,6 +114,18 @@ div.cancel-request-holder span {
 div.request-summary-holder {
 	padding-top: 30px;
 	font-size: 24px;
+}
+
+p.no-requests{
+	margin: 40px;
+	font-size: 22px;
+}
+
+button.start-ride, button.end-ride {
+	margin-top: 100px;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	font-size: 20px;
 }
 
 
