added styling to student and driver wait screen, added driver polling for new groups

--- a/kogo/templates/drivers/group_selection.html
+++ b/kogo/templates/drivers/group_selection.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block additional_javascript %}
-<script type="text/javascript" src="{{STATIC_URL}}js/group_select.js"></script>
+<script type="text/javascript" src="{{STATIC_URL}}js/group_selection.js"></script>
 {% endblock %}
 
 {% block content %}
