--- a/kogo/templates/drivers/location_groups.html
+++ b/kogo/templates/drivers/location_groups.html
@@ -1,4 +1,4 @@
-<div class="driver-select-group">
+<div class="driver-select-group" data-pickup="{{location.name}}">
     {% if groups %}
   <h3 class="dropoff-title">From <strong class="dropoff-loc"> {{ location.name }}</strong> to:</h3>
    {% for group in groups %}
