--- a/kogo/templates/students/wait_screen.html
+++ b/kogo/templates/students/wait_screen.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+  {% block additional_javascript %}
+  <script type="text/javascript" src="{{STATIC_URL}}js/waitingScreen.js"></script>
+  {% endblock %}
+
   {% block navbar_content %}
   <ul class="nav navbar-nav">
     <li><a href="{% url 'logout_user'%}">Logout</a></li>
@@ -13,7 +17,7 @@
 		<span class="glyphicon glyphicon-road"></span>
 		From <strong>{{start_loc}}</strong> to <strong>{{end_loc}}</strong>
 	</div>
-	<h1>{{group_number}}</h1>
+	<h1 class="group-number">{{group_number}}</h1>
 	<form method="post" action="{% url 'cancel_request' %}">
 		{% csrf_token %}
 		<button type="submit" class="btn btn cancel-request-holder">
