added ajax loader to driver wait screen and made ajax calls for new groups unnoticeable!

--- a/kogo/templates/drivers/location_groups.html
+++ b/kogo/templates/drivers/location_groups.html
@@ -13,7 +13,8 @@
     {% endfor %}
     {% else %}
     <p class="no-requests">
-      There are currently no requests from {{location.name}}. You have the freedom to go to another location. Please remember that just because there are no requests does not mean there are not students looking for a ride!
+      <img width="20px" src="../static/images/loader.gif">
+      Searching for <strong>{{location.name}}</strong> requests.
     </p>
     {% endif %}
   </div>
