--- a/kogo/templates/students/wait_screen.html
+++ b/kogo/templates/students/wait_screen.html
@@ -20,7 +20,7 @@
 	<h1 class="group-number">{{group_number}}</h1>
 	<form method="post" action="{% url 'cancel_request' %}">
 		{% csrf_token %}
-		<button type="submit" class="btn shadow cancel-request-holder">
+		<button type="submit" class="btn btn-default shadow cancel-request-holder">
 			<span class="glyphicon glyphicon-remove"></span>
 			<strong>Cancel Request</strong>
 		</button>
