--- a/kogo/templates/drivers/start_ride_screen.html
+++ b/kogo/templates/drivers/start_ride_screen.html
@@ -20,7 +20,7 @@
 		<div class="start-ride-holder">
 			{% for request in requests %}
 			<div class="btn-holder">
-			    <button class="student shadow btn btn-lg" data-name="{{loc.name}}">
+			    <button class="student shadow btn btn-default btn-lg" data-name="{{loc.name}}">
 			      {{request.student}}
 			      <span class="glyphicon glyphicon-ok hidden"></span>
 			    </button>
