--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -78,7 +78,8 @@ div.wait-background {
 	text-align: center;
 }
 
-div.wait-background h1{
+div.wait-background h1, 
+h1.ride-in-progress{
 	padding: 40px;
 	color: white;
 	font-size: 80px;
@@ -96,11 +97,6 @@ div.cancel-request-holder {
 
 div.push-down {
 	margin-bottom: 100px;
-}
-
-h2.ride-in-progress{
-	margin-top: 100px;
-	font-size: 50px;
 }
 
 div.cancel-request-holder span {
