--- a/kogo/templates/drivers/ride_in_progress.html
+++ b/kogo/templates/drivers/ride_in_progress.html
@@ -2,7 +2,7 @@
 
 {% block content %}	
 <div class="wait-background group-info">
-		<div class="request-summary-holder push-down">
+		<div class="request-summary-holder">
 			<span class="glyphicon glyphicon-road"></span>
 			From <strong>{{group.pickup_loc.name}}</strong> to <strong>{{group.dropoff_loc.name}}</strong>
 		</div>
