--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -27,13 +27,17 @@ nav.navbar.navbar-inverse {
 	box-shadow: 0px 2px 5px #202020;
 }
 
+div.ride-names-holder {
+	padding: 40px;
+}
+
 
 button.location-btn, button.student {
 	width: 300px;
 	margin: 22px auto;
 	font-size: 24px;
 	display: block;
-	padding: 20px;
+	padding: 12px;
 }
 
 button.location-btn.pickup {
@@ -78,8 +82,7 @@ div.wait-background {
 	text-align: center;
 }
 
-div.wait-background h1, 
-h1.ride-in-progress{
+div.wait-background h1 {
 	padding: 40px;
 	color: white;
 	font-size: 80px;
@@ -95,10 +98,6 @@ div.cancel-request-holder {
 	cursor: pointer;
 }
 
-div.push-down {
-	margin-bottom: 100px;
-}
-
 div.cancel-request-holder span {
 	color: Firebrick;
 }
@@ -111,13 +110,6 @@ div.request-summary-holder {
 p.no-requests{
 	margin: 30px;
 	font-size: 22px;
-}
-
-button.start-ride, button.end-ride {
-	margin-top: 100px;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	font-size: 20px;
 }
 
 
