--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -1,6 +1,4 @@
-html, body, div.btn-holder {
-	width: 100%;
-}
+/*Universal element and class styling*/
 
 body{
 	background: url(../images/background.jpg) no-repeat center center fixed; 
@@ -10,18 +8,42 @@ body{
   	background-size: cover;
 }
 
+html, body, div.btn-holder {
+	width: 100%;
+}
+
 html, body {
 	height: 100%;
 }
 
-nav.navbar.navbar-inverse {
-	margin-bottom: 0px;
+li.error {
+	color: #D00000;
+}
+
+span.glyphicon-remove {
+	color: red;
 }
 
 .shadow {
 	border: 1px solid LightGray;
 	box-shadow: 0px 3px 11px #202020;
 }
+
+/* End universal styling */
+
+
+/* Navbar styling */
+
+nav.navbar.navbar-inverse {
+	margin-bottom: 0px;
+}
+
+ul.nav li {
+	text-align: right;
+	font-size: 1.2em;
+}
+
+/* End Navbar Styling */
 
 .request-shadow {
 	box-shadow: 0px 2px 5px #202020;
@@ -119,50 +141,7 @@ p.no-requests{
 }
 
 
-/* Login Form */
-
-input {
-  display: block;
-  width: 100%;
-  height: 40px;
-  padding: 6px 12px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-li.error {
-	color: #D00000;
-}
-
-.login-form-container {
-	width: 300px;
-	margin: 80px auto;
-}
-
-div.input-group-addon{
-	border-radius: 5px !important;
-	border: 1px solid #ccc !important;
-}
-
-ul.nav li {
-	text-align: right;
-	font-size: 1.2em;
-}
-
-a.new-to-kogo {
-	float: right;
-	font-size: 18px;
-	margin-top: 10px;
-}
+/* New Student form */
 
 form.new-student {
 	margin: 40px auto;
@@ -180,10 +159,6 @@ button.num-requests {
 	top: 30px;
 	padding: 0px 20px;
 	font-size: 24px;
-}
-
-span.glyphicon-remove {
-	color: red;
 }
 
 div.btn-holder:last-child {
