--- a/kogo/templates/base.html
+++ b/kogo/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{STATIC_URL}}css/bootstrap.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/style.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}css/login.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-inverse" role="navigation">
@@ -20,40 +21,25 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" 
-             {% if user.driverprofile %} href="/" {% endif %}>Kogo</a>
+          <a class="navbar-brand">Kogo</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
-          {% block navbar_content %}
-          
-          {% endblock %}
+          <!-- Navbar options -->
+          {% block navbar_content %}{% endblock %}
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
 
     {% load tz %}
-    {% block content %}
 
-    {% endblock %}
+    {% block content %}{% endblock %}
 
-    <div id="footer">
-      {% if messages %}
-          {% for message in messages %}
-            <span class="message {{message.tags}}" hidden="true">{{message}}</span>
-          {% endfor %}
-      {% endif %}
-
-      <span class="num-rides">
-        {{ num_active_drivers }}
-      </span>
-    </div>
-
+    <!-- Javascript -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap.min.js"></script>
-    {% block additional_javascript %}
+    {% block additional_javascript %}{% endblock %}
 
-    {% endblock %}
   </body>
 </html>
