--- a/kogo/templates/drivers/ride_in_progress.html
+++ b/kogo/templates/drivers/ride_in_progress.html
@@ -2,20 +2,20 @@
 
 {% block content %}	
 <div class="wait-background group-info">
-		<div class="request-summary-holder">
-			<span class="glyphicon glyphicon-road"></span>
-			From <strong>{{group.pickup_loc.name}}</strong> to <strong>{{group.dropoff_loc.name}}</strong>
-		</div>
-	<div class="during-ride-container">
-			<h1 class="ride-in-progress">Riding</h1>
-			<form method="post" action="{% url 'ride_in_progress' %}">
-				{% csrf_token %}
-				<input type="hidden" name="groupID" value="{{group.id}}">
-				<button type="submit" class="shadow end-ride btn btn-default btn-lg">
-					Ride Completed
-				</button>
-			</form>
-		</div>
+	<div class="request-summary-holder">
+		<span class="glyphicon glyphicon-road"></span>
+		From <strong>{{group.pickup_loc.name}}</strong> to 
+		<strong>{{group.dropoff_loc.name}}</strong>
 	</div>
-
+<div class="during-ride-container">
+		<h1 class="ride-in-progress">Riding</h1>
+		<form method="post" action="{% url 'ride_in_progress' %}">
+			{% csrf_token %}
+			<input type="hidden" name="groupID" value="{{group.id}}">
+			<button type="submit" class="shadow end-ride btn btn-default btn-lg">
+				Ride Completed
+			</button>
+		</form>
+	</div>
+</div>
 {% endblock %}
