--- a/kogo/templates/students/dropoff_locations.html
+++ b/kogo/templates/students/dropoff_locations.html
@@ -7,7 +7,7 @@
 {% endblock %}
   
 {% block content %}
-
+<div class="content-holder">
   <h3 class="dropoff-title">
     From <strong class="dropoff-loc"> {{ pickup_loc }}</strong> to:
   </h3>
@@ -25,5 +25,6 @@
     </div>
     {% endfor %}
   </div>
+</div>
 
 {% endblock %}
