--- a/kogo/templates/students/wait_screen.html
+++ b/kogo/templates/students/wait_screen.html
@@ -11,20 +11,21 @@
   {% endblock %}
 
 {% block content %}
-
-<div class="wait-background">
-	<div class="request-summary-holder">
-		<span class="glyphicon glyphicon-road"></span>
-		From <strong>{{start_loc}}</strong> to <strong>{{end_loc}}</strong>
+<div class="content-holder">
+	<div class="wait-background">
+		<div class="request-summary-holder">
+			<span class="glyphicon glyphicon-road"></span>
+			From <strong>{{start_loc}}</strong> to <strong>{{end_loc}}</strong>
+		</div>
+		<h1 class="group-number">{{group_number}}</h1>
+		<form method="post" action="{% url 'cancel_request' %}">
+			{% csrf_token %}
+			<button type="submit" class="btn btn-default shadow cancel-request-holder">
+				<span class="glyphicon glyphicon-remove"></span>
+				<strong>Cancel Request</strong>
+			</button>
+		</form>
 	</div>
-	<h1 class="group-number">{{group_number}}</h1>
-	<form method="post" action="{% url 'cancel_request' %}">
-		{% csrf_token %}
-		<button type="submit" class="btn btn-default shadow cancel-request-holder">
-			<span class="glyphicon glyphicon-remove"></span>
-			<strong>Cancel Request</strong>
-		</button>
-	</form>
 </div>
 
 {% endblock %}
