log in after activation completed

--- a/kogo/templates/registration/activation_complete.html
+++ b/kogo/templates/registration/activation_complete.html
@@ -3,4 +3,5 @@
 
 {% block content %}
 <div>Your account is now active.</div>
+<button href="{% url 'home' %}" class="shadow btn btn-lg">Start Riding</button>
 {% endblock %}
