--- a/kogo/templates/students/student_login.html
+++ b/kogo/templates/students/student_login.html
@@ -2,7 +2,7 @@
 
 {% block navbar_content %}
   <ul class="nav navbar-nav">
-  	<li><a href="{% url 'create_account' %}">New to Kogo?</a></li>
+  	<li><a href="{% url 'registration_register' %}">New to Kogo?</a></li>
     <li><a href="{% url 'driver_login' %}">Driver Login</a></li>
   </ul>
 {% endblock %}
@@ -24,7 +24,7 @@
 	  <button type="submit" class="btn btn-lg btn-primary">
 	    Log in
 	  </button>
-	  <a class="new-to-kogo" href="{% url 'create_account' %}">New to Kogo?</a>
+	  <a class="new-to-kogo" href="{% url 'registration_register' %}">New to Kogo?</a>
 	</form>
 </div>
 
