--- a/kogo/templates/students/wait_screen.html
+++ b/kogo/templates/students/wait_screen.html
@@ -14,8 +14,7 @@
 <div class="content-holder">
 	<div class="wait-background">
 		<div class="request-summary-holder">
-			<span class="glyphicon glyphicon-road"></span>
-			From <strong>{{start_loc}}</strong> to <strong>{{end_loc}}</strong>
+			from <strong>{{start_loc}}</strong> to <strong>{{end_loc}}</strong>
 		</div>
 		<h1 class="group-number">{{group_number}}</h1>
 		<form method="post" action="{% url 'cancel_request' %}">
