styled new registration pages and added js to get from account activation complete to pickup screen

--- a/kogo/templates/registration/registration_complete.html
+++ b/kogo/templates/registration/registration_complete.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<div>Please go to your email address to verify.</div>
+<div class="content-holder">
+	<div>
+		<h1>Account created!</h1>
+		<p>An email was sent to you. Click the link</p>
+		<p>provided to verify your account.</p>
+	</div>
+</div>
 
 {% endblock %}
