--- a/kogo/templates/registration/activation_complete.html
+++ b/kogo/templates/registration/activation_complete.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+{% block additional_javascript %}
+<script type="text/javascript" src="{{STATIC_URL}}js/activationComplete.js"></script>
+{% endblock %}
 
 {% block content %}
 <div class="content-holder">
