--- a/kogo/static/css/login.css
+++ b/kogo/static/css/login.css
@@ -23,6 +23,10 @@ input {
 	margin: 80px auto;
 }
 
+.login-form-container h1 {
+  margin-bottom: 15px;
+}
+
 div.input-group-addon{
 	border-radius: 5px !important;
 	border: 1px solid #ccc !important;
