--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -8,6 +8,10 @@ body{
   	background-size: cover;
 }
 
+.btn, a, h3, h1 {
+	font-family: 'Titillium Web', sans-serif;
+}
+
 html, body, div.btn-holder {
 	width: 100%;
 }
@@ -63,6 +67,12 @@ button.location-btn, button.student {
 	padding: 35px;
 }
 
+ul.errorlist {
+	padding-left: 15px;
+	list-style: none;
+	color: Firebrick;
+}
+
 button.location-btn.pickup {
 	margin: -8px auto;
 }
@@ -74,6 +84,7 @@ div.start-ride-holder {
 h3.pickup-title, h3.dropoff-title {
 	margin-top: 0px;
 	padding-top: 20px;
+	font-family: inherit;
 }
 
 h3.pickup-title {
@@ -112,9 +123,9 @@ div.wait-background {
 }
 
 div.wait-background h1 {
-	padding: 40px;
+	padding: 35px;
 	color: white;
-	font-size: 80px;
+	font-size: 90px;
 	margin-top: 0px;
 }
 
@@ -150,7 +161,8 @@ form.new-student {
 }
 
 form.new-student h3 {
-	margin-bottom: 30px;
+	margin-bottom: 25px;
+	font-family: 'Titillium Web', sans-serif;
 }
 
 
