--- a/kogo/templates/base.html
+++ b/kogo/templates/base.html
@@ -9,6 +9,7 @@
     <link href="{{STATIC_URL}}css/bootstrap.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/style.css" rel="stylesheet">
     <link href="{{STATIC_URL}}css/login.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <nav class="navbar navbar-inverse" role="navigation">
