--- a/kogo/templates/registration/registration_form.html
+++ b/kogo/templates/registration/registration_form.html
@@ -3,11 +3,12 @@
 {% block content %}
 <form class="new-student" action="" method="post">
 	{% csrf_token %}
-	<h3>Create An Account</h3>
+	<h3>Create a Student Account</h3>
+    {{form.non_field_errors}}
     {% for field in form %}
         <div class="form-group">
-            {{ field.errors }}
             <label>{{ field.label_tag }}</label> 
+            {{ field.errors }}
             {{ field }}
         </div>
     {% endfor %}
