--- a/kogo/templates/students/student_login.html
+++ b/kogo/templates/students/student_login.html
@@ -14,7 +14,7 @@
   {% csrf_token %}
   
     <div class="form-group">
-      <input id="id_username" name="username" placeholder="Username" type="text">
+      <input id="id_username" name="username" placeholder="duke email" type="text">
     </div>
   
     <div class="form-group">
