made username and email inputs lowercase only and added back to login link in user creation form template

--- a/kogo/static/css/style.css
+++ b/kogo/static/css/style.css
@@ -8,6 +8,10 @@ body{
   	background-size: cover;
 }
 
+input#id_email, input#id_username {
+	text-transform: lowercase;
+}
+
 .btn, a, h3, h1 {
 	font-family: 'Titillium Web', sans-serif;
 }
