form work mainly

--- a/kogo/templates/students/pickup_locations.html
+++ b/kogo/templates/students/pickup_locations.html
@@ -24,8 +24,7 @@
       	</div>
         {% endfor %}
     </div>
-    <div class="dropoff" hidden="true"></div>
-  </div class="request-screens">
-</div class="content-holder">
+  </div>
+</div>
 
 {% endblock %}
