--- a/kogo/templates/students/student_login.html
+++ b/kogo/templates/students/student_login.html
@@ -10,22 +10,21 @@
 {% block content %} 
 <div class="login-form-container">
 	<h1>Student Login</h1>
-	<form role="form" action="{{url}}" method="post">
-  {% csrf_token %}
-  
-    <div class="form-group">
-      <input id="id_username" name="username" placeholder="duke email" type="text">
-    </div>
-  
-    <div class="form-group">
-      <input id="id_password" name="password" placeholder="Password" type="password">
-    </div>
-  
-	  <button type="submit" class="btn btn-lg btn-primary">
-	    Log in
-	  </button>
-	  <a class="new-to-kogo" href="{% url 'registration_register' %}">New to Kogo?</a>
-	</form>
+  <form action="{{url}}" method="post">
+    {% csrf_token %}
+      {{auth_form.non_field_errors}}
+      {% for field in auth_form %}
+          <div class="form-group"> 
+              {{ field.errors }}
+              {{ field }}
+          </div>
+      {% endfor %}
+      <button type="submit" class="btn btn-lg btn-primary">
+        Log in
+    </button>
+    <a class="new-to-kogo" href="{% url 'registration_register' %}">  New to Kogo?
+    </a>
+  </form>
 </div>
 
 {% endblock %}
