added a home page with options

--- a/kogo/templates/companies.html
+++ b/kogo/templates/companies.html
@@ -13,7 +13,7 @@
 					</strong>
 			</h1>
 			<p class="small-info">
-				B12 is a reliable service that displays your advertisments to university students in a non-traditional way. No more billboards or video displays in crowded rooms. Our solution is the best way to convince students they need
+				Kogo is a reliable service that displays your advertisments to university students in a non-traditional way. No more billboards or video displays in crowded rooms. Our solution is the best way to convince students they need
 				your product.
 			</p>
 		</div>
@@ -81,14 +81,14 @@
 				<div class="intro-text-container">
 					<h1><strong>Interested in Growing Your Business?</strong></h1>
 					<p>
-							If you are interested in advertising your products and services through B12 and would like to get in touch with us, you may contact us by email or phone. We can provide you with further information and answer any questions you may have. Ultimately, if you decide to work with us, we will set up a meeting at your location to make a deal. We strongly believe that we can increase the sales of your business, so let us help.
+							If you are interested in advertising your products and services through Kogo and would like to get in touch with us, you may contact us by email or phone. We can provide you with further information and answer any questions you may have. Ultimately, if you decide to work with us, we will set up a meeting at your location to make a deal. We strongly believe that we can increase the sales of your business, so let us help.
 					</p>
 				</div>
 				<ul class="sample-payment business-contact-list">
 					<li class="active"><strong>Contact Info</strong></li>
 					<li>
 						Email
-						<span class="right">businesses.b12ads@gmail.com</span>
+						<span class="right">businesses.kogoads@gmail.com</span>
 					</li>
 					<li>
 						Phone Number
