--- a/kogo/static/css/informational.css
+++ b/kogo/static/css/informational.css
@@ -184,7 +184,7 @@ div.home-video-holder {
 }
 
 div.intro-container {
-	margin-top: 50px;
+	margin-top: 25px;
 	width: 100%;
 	height: 415px;
 }
@@ -248,6 +248,11 @@ div.three-step-container {
 
 div.home-icon-container p {
 	font-size: 1.2em;
+}
+
+div.content-body {
+	width: 1200px;
+	margin: 0px auto;
 }
 
 div.price-info-wrapper {
