--- a/kogo/templates/base.html
+++ b/kogo/templates/base.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Kogo Adv</title>
+    <title>Kogo Ads</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Imported Stylesheets -->
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login.css">
+    <link rel="stylesheet" type="text/css" media='screen and (max-width: 900px)' href="{{STATIC_URL}}css/home/mobile_home.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 901px)' href="{{STATIC_URL}}css/home/desktop_sm_home.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 1301px)' href="{{STATIC_URL}}css/home/desktop_lg_home.css">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/informational.css">
+
     <!-- Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
   </head>
