--- a/kogo/templates/base.html
+++ b/kogo/templates/base.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/style.css">
     <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login.css">
-    <link rel="stylesheet" type="text/css" media='screen and (max-width: 900px)' href="{{STATIC_URL}}css/home/mobile_home.css">
-    <link rel="stylesheet" type="text/css" media='screen and (min-width: 901px)' href="{{STATIC_URL}}css/home/desktop_sm_home.css">
-    <link rel="stylesheet" type="text/css" media='screen and (min-width: 1301px)' href="{{STATIC_URL}}css/home/desktop_lg_home.css">
-    <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/informational.css">
+
+    <link rel="stylesheet" type="text/css" media='screen and (max-width: 900px)' href="{{STATIC_URL}}css/home/mobile.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 901px)' href="{{STATIC_URL}}css/home/desktop_sm.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 1301px)' href="{{STATIC_URL}}css/home/desktop_lg.css">
+    <link rel="stylesheet" type="text/css" media='screen and (max-width: 1300px)' href="{{STATIC_URL}}css/company/mobile.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 1301px)' href="{{STATIC_URL}}css/company/desktop.css">
 
     <!-- Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
@@ -29,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand">Kogo</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Kogo</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
