--- a/kogo/templates/home.html
+++ b/kogo/templates/home.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
+{% block navbar_content %}
+  <ul class="nav navbar-nav">
+    <li><a href="{% url 'student_login'%}">Student Login</a></li>
+    <li><a href="{% url 'driver_login'%}">Driver Login</a></li>
+    <li><a href="{% url 'companies'%}">Company Info</a></li>
+  </ul>
+{% endblock %}
+
 {% block content %}
 <div class="content-holder home">
 	<section class="home-container shadow">
