--- a/kogo/templates/drivers/ride_in_progress.html
+++ b/kogo/templates/drivers/ride_in_progress.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% block navbar_content %}
+  <ul class="nav navbar-nav">
+    <li><a href="{% url 'logout_user'%}">Logout</a></li>
+  </ul>
+{% endblock %}
+
 {% block content %}	
 <div class="wait-background group-info">
 	<div class="request-summary-holder">
